filter and pagination

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,14 @@
     <title>React Playground</title>
   </head>
   <body>
+    <style>
+      #app > div {
+        display: block;
+        width: 640px;
+        max-width: 66%;
+        margin: 40px auto;
+      }
+    </style>
     <div id="app"></div>
   </body>
 </html>
